fixes white background seeping through the cracks between divs. found this out when setting the wrapping .content div to display: contents. which effectively does not render the .content div. i would have used this, but it doesnt have good support outside of firefox. which, luckily i was using, and able to see that the wrapping element was causing the strange slivers to appear

--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -57,6 +57,7 @@
   background-color: transparent;
   padding: 0 var(--s-2);
   cursor: pointer;
+  outline: none;
 }
 .gallery__previous {
   left: 0;
