--- a/scss/dependencies/_color.scss
+++ b/scss/dependencies/_color.scss
@@ -8,3 +8,10 @@ $lightest-color: rgb(255, 255, 255);
 
 $pop-color-1: rgb(91, 102, 251);
 $pop-color-2: rgb(252, 54, 142);
+
+:root {
+  --darkest-color: #{ $darkest-color };
+  --lightest-color: #{ $lightest-color };
+  --pop-color-1: #{ $pop-color-1 };
+  --pop-color-2: #{ $pop-color-2 };
+}
